// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> snapshots rendered with title and subtitle 1`] = `
<div
  className="snapW-Content"
>
  <p
    className="snapW-Content__text snapW-Content__title"
  >
    Food
  </p>
  <p
    className="snapW-Content__text snapW-Content__subtitle"
  >
    Tastes goood
  </p>
</div>
`;

exports[`<Content /> snapshots rendered with title, subtitle and tagline 1`] = `
<div
  className="snapW-Content"
>
  <p
    className="snapW-Content__text snapW-Content__title"
  >
    Food
  </p>
  <p
    className="snapW-Content__text snapW-Content__subtitle snapW-Content__subtitle--is-bold"
  >
    Tastes goood
  </p>
  <p
    className="snapW-Content__text snapW-Content__tagline"
  >
    yupp
  </p>
</div>
`;
